--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>facebook</title>
+        <title>project 1</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/31f96e4908.js" crossorigin="anonymous"></script>
   </head>
